# SugCure

./: .gitignore  CMakeLists.txt  MapManager.cpp  MapManager.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  README.md  SFML.vcxproj  SFML.vcxproj.filters  SugCure.sln  main.cpp
SugCure/: SugCure.vcxproj  SugCure.vcxproj.filters
SugCure/src/: MapManager.cpp  Platform.cpp  Player.hpp  config.h
SugCure/src/Editor/: Editor.cpp  Editor.h
src/: MapManager.cpp  MapManager.hpp  Platform.cpp  Platform.hpp  Player.cpp  config.h  main.cpp
